plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.3'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'kr'
//version = '0.0.1-SNAPSHOT'
bootJar{
archiveFileName = "ROOT.jar"
}
java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    //mapstruct 의존성
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'


    //spring security
    implementation "org.springframework.boot:spring-boot-starter-security"

    //oauth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'io.socket:socket.io-client:2.0.0'

    //JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    //쉬운 파싱을 위한 StringUtils
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'

    //CoolSMS
    implementation 'net.nurigo:sdk:4.3.0'

    //Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //api 통신을위한 가짜 객체를생성. 결과값을 미리 정할수있음
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.8.0'

    //WebClient 사용해서 외부 API 호출하기위한 의존성 추가
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
}

tasks.named('bootBuildImage') {
    builder = 'paketobuildpacks/builder-jammy-base:latest'
}

tasks.named('test') {
    useJUnitPlatform()
}


